--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,30 @@ body {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: var(--background-white);
+    margin: 0;
 }
 * {
     box-sizing: border-box;
 }
-h1, h2, h3, h4, p, ul {
-    margin: 0;
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+h1, h2, h3, h4, h5, p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+ul, ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+img {
+    display: block;
+}
+button {
+    cursor: pointer;
 }
 :root {
     --background-black: #2e2f42
@@ -17,7 +35,10 @@ h1, h2, h3, h4, p, ul {
 }
 .container {
     width: 1158px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 .logo {
     font-family: "Raleway", sans-serif;
@@ -27,11 +48,9 @@ h1, h2, h3, h4, p, ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
-    display: inline;
-    flex-direction: row;
+    display: flex; 
     align-items: center;
-    margin: 24px 0px 24px 156px;
-    position: absolute;
+    margin-right: 76px;
 }
 .link {
     text-decoration: none;
@@ -47,52 +66,44 @@ h1, h2, h3, h4, p, ul {
 }
 .list {
     list-style: none;
-    display: flex;
-    flex-direction: row;
 }
 .paragraph {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 24px;
     letter-spacing: 0.02em;
-    padding-right: 40px;
-}
-.colorpar {
-    color: var(--background-black);
+    color: #2E2F42;
 }
 .address {
     font-style: normal;
+    margin-left: auto;
 }
 .mail {
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02em; 
-    margin: 24px 0px 24px 720px;
+    letter-spacing: 0.02em;
 }  
-.phone {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em; 
-    margin: 24px;
-}
 .colorcontact {
     color: var(--contact-color);
 }
 .first {
     background: #2E2F42;
-    position: absolute;
-    width: 1158px;
-    height: 600px;
-    margin: 72px 0px 1920px 0px;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 .header {
+    font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
-    position: absolute;
-    margin: 188px 331px 292px 331px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
 }
 .order-service-button {
     background-color: #4D5AE5;
@@ -104,13 +115,12 @@ h1, h2, h3, h4, p, ul {
     color: #ffffff;
     cursor: pointer;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 16px 32px;
-    gap: 10px;
+    align-items: center;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    margin: 356px 495px 188px 495px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 16px 32px;
 }
 .order-service-button:hover {
     background-color: #404bbf;
@@ -124,15 +134,14 @@ h1, h2, h3, h4, p, ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    margin-bottom: 8px;
 }
 .list-text {
+    font-weight: 400;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 24px;
     letter-spacing: 0.02em;
     color: #434455;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
 }
 .third-article-header {
     font-size: 36px;
@@ -145,61 +154,28 @@ h1, h2, h3, h4, p, ul {
 }
 .fourth-article {
     background-color: #f4f4fd;
-    position: absolute;
-    width: 1158px;
-    height: 732px;
-    margin: 1548px 0 312px 0;
-}
-.fourth-article-header {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2E2F42;
-    padding: 120px 498px 572px 498px;
-    position: absolute;
 }
 .fourth-article-list {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 32px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
-    margin: 232px 16px 120px 0px;
+    flex-basis: calc(100% / 4 - 24px);
+    margin-left: 24px;
+    margin-top: 24px;
 }
 .footer {
-    position: absolute;
-    width: 1158px;
-    height: 312px;
     background: #2E2F42;
-    margin-top: 2280px;
 }
 .studioend {
     color:#f4f4fd;
 }
 .buttonport {
-    font-family: "Roboto", sans-serif;
+    background: #F4F4FD;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: var(--logo-color);
-    background-color: #F4F4FD;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    color: #4D5AE5;
     padding: 12px 24px;
-    width: 116px;
-    height: 48px;
-    background: #F4F4FD;
-    border: 1px solid #E7E9FC;
-    border-radius: 4px;
 }
 .buttonport:hover {
     background-color: #404bbf;
@@ -209,57 +185,34 @@ h1, h2, h3, h4, p, ul {
     background-color: #404bbf;
     color: #ffffff;
 }
-.header-container {
-    position: absolute;
-    width: 1158px;
-    height: 72px;
-    border-bottom: 1px solid #E7E9FC;
-}
-.nav-list {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin: 24px 630px 24px 347px;
-    position: absolute;
-}
-.first-article-container {
-    position: absolute;
-    width: 1158px;
-    height: 600px
-}
-.second {
-    position: absolute;
-    width: 1128px;
-    margin-top: 792px;
-}
-.list-item {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-right: 24px;
-    gap: 8px;
-    width: 264px;
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 .third-section {
-    position: absolute;
-    width: 1128px;
-    height: 412px;
-    margin: 1016px 0px 1164px 0px;
+    padding-top: 0;
 }
 .list-images {
-    padding-right: 24px;
+    display: flex;
+    flex-basis: calc(100% / 3 - 20px);
+    margin-left: 20px;
+    margin-top: 20px;
+}
+.picture-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -20px;
+    margin-top: -20px;
 }
 .footer-text {
-    color: #F4F4FD;
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-    width: 264px;
-    padding: 140px 0px 100px 156px;
-}
-.footer-text-with-logo {
-    position: absolute;
+    color: #E7E9FC;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 264px;
 }
 .logo-footer {
     font-family: "Raleway", sans-serif;
@@ -269,51 +222,19 @@ h1, h2, h3, h4, p, ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
-    display: inline;
-    flex-direction: row;
-    align-items: center;
-    position: absolute;
-    margin: 100px 0px 188px 156px;
+    margin-bottom: 16px;
 }
 .filter-buttons {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 24px;
-    padding: 168px 286px 0px 286px;
-}
-.all-button {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 12px 24px;
-    width: 69px;
-    height: 48px;
-    background: #404BBF;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    cursor: pointer;
-}
-.all {
-    color: #ffffff;
-}
-.filter-buttons-text {
-    color: #4D5AE5;
-}
-.vector {
-    margin: 0px 0px 60px 334px;
+    justify-content: center;
+    column-gap: 24px;
+    margin-bottom: 72px;
 }
 .portfolio-list {
-    list-style: none;
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
+    margin-top: -24px;
+    margin-left: -24px;
 }
 .portfolio-images {
     width: 320px;
@@ -322,27 +243,86 @@ h1, h2, h3, h4, p, ul {
     border: 1px solid #E7E9FC;
     margin: 24px 24px 24px 0;
 }
-.fourth-article-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    padding-bottom: 16px;
-}
 .third-header-portfolio {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
-    padding-left: 16px;
-    padding-top: 32px;
+    margin-bottom: 8px;
 }
 .portfolio-list-text {
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    padding-left: 16px;
-    padding-top: 8px;
+}
+.page-header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+.flex {
+    display: flex;
+    column-gap: 40px;
+}
+.list-of-advantages {
+    display: flex;
+    column-gap: 24px;
+}
+.list-of-employees {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -24px;
+    margin-top: -24px;
+}
+.employee-information {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
+    padding: 32px 16px 32px 16px;
+}
+.employee-name {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+.employee-position {
+    display: flex;
+    justify-content: center;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.footer-container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.portfolio-main {
+    padding-top: 96px;
+    padding-bottom: 120px;
+}
+.cards-info {
+    background: #FFFFFF;
+    border: 1px solid #E7E9FC;
+    padding: 32px 16px;
+}
+.fourth-article-header {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2E2F42;
+    margin-bottom: 72px;
 }
